changed button and fixed gap

--- a/css/universal.css
+++ b/css/universal.css
@@ -52,6 +52,7 @@ header {
     width: 0;
     background-color: white;
     transition: 1s;
+    float: right;
 }
 
 .navigation div {
@@ -60,12 +61,12 @@ header {
     align-items: center;
     justify-content: space-evenly;
     width: 100%;
-    height: 500px;
+    height: 900px;
 }
 
 .display {
     position: fixed;
-    top: 100px;
+    top: 75px;
     z-index: 100;
     width: 100%;
     background-color: #f5e9e9;
@@ -75,7 +76,6 @@ header {
 .xbutton {
     padding: 5px 20px 5px 10px;
     font-size: 40px;
-    background-color: #1574d9;
     float: right;
     border: none;
     margin-right: 30px;
